--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -1,7 +1,7 @@
 
 nav {
     top: 0;
-    position: sticky;
+    position: fixed;
     width: 100%;
     background-color: #0c0c0c;
     overflow: hidden;
